refactor: synchronize all gameService methods refactor: GameSpecs is renamed to gameRepository