@@ -6,53 +6,53 @@ import ir.sharif.aic.hideandseek.core.commands.DoActionCommand;
 import ir.sharif.aic.hideandseek.core.commands.WatchCommand;
 import ir.sharif.aic.hideandseek.core.events.GameEvent;
 import ir.sharif.aic.hideandseek.core.events.GameStatusChangedEvent;
+import ir.sharif.aic.hideandseek.core.events.GameTurnChangedEvent;
 import ir.sharif.aic.hideandseek.core.exceptions.PreconditionException;
 import ir.sharif.aic.hideandseek.core.models.*;
 import ir.sharif.aic.hideandseek.lib.channel.AsyncChannel;
 import ir.sharif.aic.hideandseek.lib.channel.Channel;
 import org.springframework.stereotype.Service;
 
-import java.util.stream.Collectors;
-
+/** Deaths, Result and Status, Visibility */
 @Service
 public class GameService {
-  private final GameRepository specs;
+  private final GameRepository gameRepository;
   private final Channel<GameEvent> eventChannel;
   private GameStatus status;
   private GameResult result;
-  private AgentType turn;
+  private Turn turn;
 
-  public GameService(GameRepository specs) {
-    this.specs = specs;
+  public GameService(GameRepository gameRepository) {
+    this.gameRepository = gameRepository;
     this.eventChannel = new AsyncChannel<>();
     this.status = GameStatus.PENDING;
     this.result = GameResult.UNKNOWN;
-    this.turn = AgentType.THIEF;
+    this.turn = Turn.THIEF_TURN;
   }
 
-  public void handle(DeclareReadinessCommand cmd) {
+  public synchronized void handle(DeclareReadinessCommand cmd) {
     cmd.validate();
-    var agent = this.specs.findAgentByToken(cmd.getToken());
+    var agent = this.gameRepository.findAgentByToken(cmd.getToken());
     agent.apply(cmd, this.eventChannel);
 
-    if (this.specs.everyAgentIsReady()) {
+    if (this.gameRepository.everyAgentIsReady()) {
       var fromStatus = this.status;
       this.status = GameStatus.ONGOING;
       this.eventChannel.push(new GameStatusChangedEvent(fromStatus, GameStatus.ONGOING));
     }
   }
 
-  public void handle(WatchCommand cmd) {
+  public synchronized void handle(WatchCommand cmd) {
     cmd.validate();
-    this.specs.assertAgentExistsWithToken(cmd.getToken());
+    this.gameRepository.assertAgentExistsWithToken(cmd.getToken());
     this.eventChannel.addWatcher(cmd.getWatcher());
   }
 
-  public void handle(DoActionCommand cmd) {
+  public synchronized void handle(DoActionCommand cmd) {
     cmd.validate();
-    var agent = this.specs.findAgentByToken(cmd.getToken());
+    var agent = this.gameRepository.findAgentByToken(cmd.getToken());
 
-    if (!agent.is(this.turn)) {
+    if (!agent.canDoActionOnTurn(this.turn)) {
       throw new PreconditionException("it's not your turn yet.");
     }
 
@@ -67,22 +67,26 @@ public class GameService {
       return;
     }
 
-    var path = this.specs.findPath(src, dst);
-    agent.moveAlong(path);
+    var path = this.gameRepository.findPath(src, dst);
+    agent.moveAlong(path, this.eventChannel);
+
+    if (this.gameRepository.everyAgentHasMovedThisTurn()) {
+      this.gameRepository.getAllAgents().forEach(Agent::onTurnChange);
+      this.turn = this.turn.next();
+      this.eventChannel.push(new GameTurnChangedEvent(this.turn));
+    }
   }
 
   public HideAndSeek.GameView getView(String fromToken) {
-    var viewerAgent = this.specs.findAgentByToken(fromToken);
+    var viewerAgent = this.gameRepository.findAgentByToken(fromToken);
     var visibleAgents =
-        this.specs.findVisibleAgents(viewerAgent).stream()
-            .map(Agent::toProto)
-            .collect(Collectors.toList());
+        this.gameRepository.findVisibleAgents(viewerAgent).stream().map(Agent::toProto).toList();
 
     return HideAndSeek.GameView.newBuilder()
         .setStatus(this.status.toProto())
         .setViewer(viewerAgent.toProto())
         .setResult(this.result.toProto())
-        .setSpecs(this.specs.getSpecs())
+        .setSpecs(this.gameRepository.getSpecs())
         .setTurn(this.turn.toProto())
         .addAllVisibleAgents(visibleAgents)
         .build();
